// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// A public key in the ElGamal crypto system.
message ElGamalPublicKey {
  // ID of the OpenSSL built-in elliptic curve. For example, 415 for the
  // prime256v1 curve.
  int32 elliptic_curve_id = 1;

  // Public key generator `g`.
  bytes generator = 2;

  // Public key element `y = g^x`, where `g` is the generator and `x` is the
  // secret key.
  bytes element = 3;
}
